# Relavancy-Detection-RoomVU-main

./: .gitlab-ci.yml  RoomVU.sqbpro
MVP/: Readme.md  create_venv.ps1  create_venv.sh  enable_venv.ps1  setup.cfg
MVP/src/: SpacyModel.py  app.py  utils.py
MVP/src/roomvu_task.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
MVP/src/static/css/: view.css
MVP/src/templates/: form.html  index.html
docs/exploration/: Readme.md  RoomVU.sqbpro  config.py  data_prep.py  db_utils.py  initial_db_load.py  lang_detect.py  oversampling.py  spaCy_tst.py  train_cleaned_v2.csv  train_cleaned_v2.tsv
