[metadata] author=Parman
description=RoomVU task
name=roomvu-task

[options]
packages=find:
package_dir=
    =src
zip_safe=False
install_requires=
    pandas
    flask
    spacy>=3.0.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts=
    format_check=build.scripts:format_check [build]
    format_fix=build.scripts:format_fix [build]
    imports_check=build.scripts:imports_check [build]
    imports_fix=build.scripts:imports_fix [build]
    lint=build.scripts:lint [build]
    unit_test=build.scripts:unit_test [build]

[options.extras_require]
build=
    vulture
    autopep8

[pycodestyle]
ignore = E126, E128, E131, E501, W292, E302, E303, W1514
max-line_length=160
